# python_labs

./: .coverage  .coverage 2  README.md  pyproject.toml
data/: cities.csv
data/lab03/: input.txt  report.csv
data/lab05/samples/: people.json
data/lab06/: testlab06.02
data/lab08/: students_input.json  students_output.json
data/lab09/: students_test.csv
images/src/lab01/: 03_discount_vat.py  06.py
images/src/lab02/: arrays.py
images/src/lab04/: README.md  text_report.py
images/src/lib/: lib-text.py  tuples.py
src/: main.py
src/data/lab09/: students_test.csv  test_students.csv
src/lab01/: 01_greeting.py  02_sum_avg.py  05_initials_and_len.py  README.md
src/lab02/: 01_arrays.py  03_flatten.py  README.md  arrays.py  matrix.py  tuples.py
src/lab02/arrays/: flatten.py
src/lab02/matrix/: col_sums.py  row_sums.py  transpose.py
src/lab02/tuples/: tuples.py
src/lab02/Задание 1/: 02_unique_sorted.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py  test_lab08.py
src/lab09/: __init__.py  group.py  test_lab09
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: lib-text.py  text.py  text_stats  text_stats.py
src/python_labs_Egor.egg-info/: PKG-INFO  SOURCES.txt
src/python_labs_Vlad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spam_eggs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_json_csv.py  test_text.py
