[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_labs_Vlad"
version = "24.11.2025"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]
dependencies=[]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__pycache__/*",
    "*/csv_xlsx.py",
    "*/lib/csv_xlsx.py",
    "*/samples.py", 
    "*/arrays.py",
    "*/matrix.py",
    "*/io_txt_csv.py",
    "*/text_report.py",
    "*/text_stats.py",
    "*/tuples.py",
    "*/lib/__init__.py*",
    "*/lib/json_csv.py*",
    "*/lab05/__init__.py*",
    "*/lab06/__init__.py*",
    "*/lab06/cli_convert.py*",
    "*/lab06/cli_text.py*"
]