[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "2025.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]
dependencies = [
  "openpyxl>=3.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/
)

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\():",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_*",
    "*/__pycache__/*",
    "*/csv_xlsx.py",
    "*/lib/csv_xlsx.py",
    "*/samples.py", 
    "*/arrays.py",
    "*/matrix.py",
    "*/io_txt_csv.py",
    "*/text_report.py",
    "*/text_stats.py",
    "*/tuples.py",
    "*/lib/__init__.py",
    "*/lib/json_csv.py",
    "*/lab05/__init__.py", 
    "*/lib/text_stats*.py",
    "*/lab05/csv_xlsx.py"
]

'''